--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style>
-        body{ background-color: gray;}
-        p{color: aliceblue; font-family: Arial, Helvetica, sans-serif;}
-        img {opacity: 1;}
+        body{ background-image: url(bg.png); background-repeat: no-repeat; background-size: cover;}
+        p{color: aliceblue; font-family: Arial, Helvetica, sans-serif; text-align: center;}
+        img {opacity: 1; border-radius: 30%;}
         h1{color: black; font: 200;}
     </style>
 </head>
@@ -16,34 +16,34 @@
     <a href="https://www.instagram.com/bolingoliii"><img src="instagram.png" width="50pt" height="50pt" align="right"></a>
     <a href=""><img src="github.png" width="50pt" height="50pt" align="right"></a><br>
     <marquee><h1>Hellow! I'm Ernest-Malcolm and welcome to my personal webpage</h1></marquee>
-    <label for="Personal information" style="background-color: maroon; width: 500px; font-size: 50px;">
+    <label for="Personal information" style="background-color: #008B8B; width: 500px; font-size: 50px; border-radius: 30%;">
         Personal information</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <label for="Education background" style="background-color: azure; width: 500px; font-size: 50px; align-items: center;">  
+    <label for="Education background" style="background-color: #464646; width: 500px; font-size: 50px; border-radius: 30%;">  
         Education background</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <label for="Hobbies and Interests" style="background-color: maroon; width: 500px; font-size: 50px;">  
+    <label for="Hobbies and Interests" style="background-color: #008B8B; width: 500px; font-size: 50px; border-radius: 30%;">  
         Hobbies and Interests</label><br><br><br>
     <table width="1300px" height="1000px" align="center">
         <tr>
-            <td style="background-color: azure; font-size: 40px; width: 650px;"><h3>Personal information</h3></td>
-            <td style="background-color: maroon; font-size: 20px; width: 650px;"><p>My name is Ernest Mwinchumu. I'd love it if you can also refer me to Malcolm. 
-                I'm the only son and child in my family, the only heir to the throne they'd say in Zamunda maybe.<br>
-                <center><img src="meDad.jpg" width="400px" height="400px"></center><br>
-                My birthday is on 30th May and as I write this its about 2weeks to my 21st birthday, God is good.
+            <td style="background-color: #464646; font-size: 40px; width: 650px; border-radius: 30%; text-align: center;"><h3>Personal information</h3></td>
+            <td style="background-color: #008B8B; font-size: 20px; width: 650px; border-radius: 20%;"><p>My name is Ernest Mwinchumu.<br>
+                I'd love it if you can also refer me to Malcolm or as some call me, Lukaku.<br> 
+                I'm the only son and child in my family, born of a happy, God-fearing family of a Julius engineer and a Rachel HR Manager.<br>
+                <center><img src="meDad.jpg" width="400px" height="300px"></center><br>
             </p></td>
         </tr>
         <tr>
-            <td style="background-color: maroon;"><p>Listen, everyday in the world is an educational encounter so this background 
+            <td style="background-color: #008B8B;"><p>Listen, everyday in the world is an educational encounter so this background 
                 is literally endless. But with formality, here's my Educational background which I should say has had alot of endeavors:
                 <ul>
-                    <li>2020-Present: </li>
+                    <li>2020-Present: Un</li>
                 </ul>
             </p></td>
-            <td style="background-color: azure; font-size: 40px;"><h3>Education background</h3></td>
+            <td style="background-color: #464646; font-size: 40px;"><h3>Education background</h3></td>
             </tr>
         </tr>
         <tr>
-            <td style="background-color: azure; font-size: 40px;"><h3>Hobbies and interests</h3></td>
-            <td style="background-color: maroon;"><b><p>I am a man of quite a number of hobbies and interests 
+            <td style="background-color: #464646; font-size: 40px;"><h3>Hobbies and interests</h3></td>
+            <td style="background-color: #008B8B;"><b><p>I am a man of quite a number of hobbies and interests 
                 but some have caught most of my attention and affection.</p></b></td>
         </tr>
     </table>
