--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style>
-        body{ background-image: url(https://github.com/ernestmalcolm/webpage/blob/main/bg.png); background-repeat: no-repeat; background-size: cover;}
+        body{ background-color: #464646; background-repeat: no-repeat; background-size: cover;}
         p{color: aliceblue; font-family: Arial, Helvetica, sans-serif; text-align: center;}
         img {opacity: 1; border-radius: 30%;}
         h1{color: black; font: 200;}
