--- a/index.html
+++ b/index.html
@@ -4,24 +4,30 @@
     <title>Document</title>
     <style>
         body{ background-color: #464646; background-repeat: no-repeat; background-size: cover;}
-        p{color: aliceblue; font-family: Arial, Helvetica, sans-serif; text-align: center;}
+        p{color: black; font-family: Arial, Helvetica, sans-serif; text-align: center;}
         img {opacity: 1; border-radius: 30%;}
         h1{color: black; font: 200;}
     </style>
 </head>
 <body>
     <p style=background-repeat: no-repeat; background-size: 600px 600px;></p>
-    <a href=""><img src="facebook.png" width="50pt" height="50pt" align="right"></a>
-    <a href="https://twitter.com/ErnestMalcolm2?s=08"><img src="twitter.png" width="50pt" height="50pt" align="right"></a>
-    <a href="https://www.instagram.com/bolingoliii"><img src="instagram.png" width="50pt" height="50pt" align="right"></a>
-    <a href=""><img src="github.png" width="50pt" height="50pt" align="right"></a><br>
-    <marquee><h1>Hellow! I'm Ernest-Malcolm and welcome to my personal webpage</h1></marquee>
-    <label for="Personal information" style="background-color: #008B8B; width: 500px; font-size: 50px; border-radius: 30%;">
-        Personal information</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <label for="Education background" style="background-color: #464646; width: 500px; font-size: 50px; border-radius: 30%;">  
-        Education background</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <label for="Hobbies and Interests" style="background-color: #008B8B; width: 500px; font-size: 50px; border-radius: 30%;">  
-        Hobbies and Interests</label><br><br><br>
+    <h1 style="text-align: center;">Hellow! I'm Ernest-Malcolm and welcome to my personal webpage</h1>
+    <nav style="background-color:#464646;">
+    <label for="Personal" 
+        style="width: 500px; font-size: 35px; background-color: #008B8B; text-align: left;">
+        Personal information</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <label for="Education" style="width: 500px; font-size: 35px; background-color:#464646; text-align: center;">  
+        Education background</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <label for="Hobbies" style="width: 500px; font-size: 35px; background-color:#008B8B; text-align: right;">  
+        Hobbies and Interests</label></nav><br><br><br>
     <table width="1300px" height="1000px" align="center">
         <tr>
             <td style="background-color: #464646; font-size: 40px; width: 650px; border-radius: 30%; text-align: center;"><h3>Personal information</h3></td>
@@ -32,20 +38,41 @@
             </p></td>
         </tr>
         <tr>
-            <td style="background-color: #008B8B;"><p>Listen, everyday in the world is an educational encounter so this background 
-                is literally endless. But with formality, here's my Educational background which I should say has had alot of endeavors:
+            <td style="background-color: #008B8B; font-size: 25px; border-radius: 20%;">
+                &nbsp;&nbsp;
                 <ul>
-                    <li>2020-Present: Un</li>
-                </ul>
-            </p></td>
-            <td style="background-color: #464646; font-size: 40px;"><h3>Education background</h3></td>
+                    <li>2020-Present: University of Dar-es-salaam </li><br>
+                    <li>2018-2020: Feza Boys' High School </li><br>
+                    <li>2014-2017: Rosmini Secondary School </li><br>
+                    <li>2012-2013: St. Joseph Millenium Primary School </li><br>
+                    <li>2011-2012: Academic International Primary School </li><br>
+                    <li>2008-2010: Eden Garden Education Trust</li><br>
+                    <li>2005-2007: St Joseph Kindergaten & Primary School</li><br>
+                </ul></td>
+            <td style="background-color: #464646; font-size: 40px; text-align: center;"><h3>Education background</h3></td>
             </tr>
         </tr>
         <tr>
-            <td style="background-color: #464646; font-size: 40px;"><h3>Hobbies and interests</h3></td>
-            <td style="background-color: #008B8B;"><b><p>I am a man of quite a number of hobbies and interests 
-                but some have caught most of my attention and affection.</p></b></td>
+            <td style="background-color: #464646; font-size: 40px; text-align: center;"><h3>Hobbies and interests</h3></td>
+            <td style="background-color: #008B8B; border-radius: 20%; font-size: 25px; text-align: center;">
+                <br>
+            <p>In my free time, I pursue a couple of stuff, hobbies and interests.
+                <ul>
+                    <li>I play and watch soccer, as a matter of fact I am a die-hard Manchester United fan</li><br>
+                    <li>I play and watch Court Tennis</li><br>
+                    <li>I listen to music, particularly a fan of Khalid, Ed Sheeran, Fireboy DML and Jorja Smith</li><br>
+                    <li>I watch some movies and series on my free-time. I'm a big fan of F.R.I.E.N.D.S, Scorpion and The Blacklist</li><br>
+                </ul>
+            </p>
+        </td>
         </tr>
     </table>
+    <p style="font-size: 40px; text-align: center;">My social media profile links are attached below. Hope to get intouch with you someday.<br>
+        Cheers!!<br>
+        <a href=""><img src="facebook.png" width="50pt" height="50pt" align="center"></a>
+        <a href="https://twitter.com/ErnestMalcolm2?s=08"><img src="twitter.png" width="50pt" height="50pt" align="center"></a>
+        <a href="https://www.instagram.com/bolingoliii"><img src="instagram.png" width="50pt" height="50pt" align="center"></a>
+        <a href="https://github.com/ernestmalcolm"><img src="github.png" width="50pt" height="50pt" align="center"></a><br></td>
+    </p>
 </body>
 </html>
