--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p style=background-repeat: no-repeat; background-size: 600px 600px;></p>
     <h1 style="text-align: center;">Hellow! I'm Ernest-Malcolm and welcome to my personal webpage</h1>
     <nav style="background-color:#464646;">
+        <marquee>
     <label for="Personal" 
         style="width: 500px; font-size: 35px; background-color: #008B8B; text-align: left;">
         Personal information</label>
@@ -27,7 +28,8 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <label for="Hobbies" style="width: 500px; font-size: 35px; background-color:#008B8B; text-align: right;">  
-        Hobbies and Interests</label></nav><br><br><br>
+        Hobbies and Interests</label></nav>
+        </marquee><br><br><br>
     <table width="1300px" height="1000px" align="center">
         <tr>
             <td style="background-color: #464646; font-size: 40px; width: 650px; border-radius: 30%; text-align: center;"><h3>Personal information</h3></td>
