--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         body{ background-color: #464646; background-repeat: no-repeat; background-size: cover;}
         p{color: black; font-family: Arial, Helvetica, sans-serif; text-align: center;}
         img {opacity: 1; border-radius: 30%;}
-        h1{color: black; font: 200;}
+        h1 {color: black; font: 200;}
+        h3 :hover{transform: scale(1.2);}
     </style>
 </head>
 <body>
