--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Personal Webpage</title>
     <style>
         body{ background-color: #464646; background-repeat: no-repeat; background-size: cover;}
         p{color: black; font-family: Arial, Helvetica, sans-serif; text-align: center;}
