--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <p style=background-repeat: no-repeat; background-size: 600px 600px;></p>
-    <h1 style="text-align: center;">Hellow! I'm Ernest-Malcolm and welcome to my personal webpage</h1>
+    <h1 style="text-align: center;">Hellow! I'm Ernest Mwinchumu and welcome to my personal webpage</h1>
     <nav style="background-color:#464646;">
         <marquee>
     <label for="Personal" 
