--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="aboutme.html" class="active">About me</a>
         <a href="logsign.html">Register</a>
         <a href="course.html">Courses</a>
