--- a/logsign.html
+++ b/logsign.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="aboutme.html">About me</a>
         <a href="logsign.html" class="active">Register</a>
         <a href="course.html">Courses</a>
