--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="homenav">
-        <a href="home.html" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="aboutme.html">About me</a>
         <a href="logsign.html">Register</a>
         <a href="course.html">Courses</a>
